service-gettingstarted.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mygetting-started
  name: mygetting-started
spec:
  type: ClusterIP
  ports:
  - port: 81
    protocol: TCP
    targetPort: 80
  selector:
    app: mygetting-started
